--- a/assets/Css/index.css
+++ b/assets/Css/index.css
@@ -15,6 +15,9 @@
   --background-color: #eee;
   --background-color-mid: #E3E3E3;
   --background-color-heavy: #B4B4B8;
+
+
+
   --transition-delay: 0.5s;
   --padding-top-bottom: 100px 0;
 }
@@ -28,7 +31,34 @@ body {
   background-color: var(--background-color);
 }
 
+/* waves between sections */
+section.wave {
+  position: relative;
+  padding-top: 100px;
+}
 
+.wave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.wave svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 83px;
+}
+
+section.categories-sec .wave .shape-fill {
+  fill: var(--background-color-mid);
+}
+section.latest-events .wave .shape-fill {
+  fill: var(--background-color);
+}
 
 /* navbar */
 .navbar {
@@ -74,10 +104,11 @@ body {
   line-height: 1.4;
   direction: rtl;
 }
+
 .carousel-item img {
   width: 100%;
-  height: 800px; 
-  object-fit: cover; 
+  height: 800px;
+  object-fit: cover;
   border-radius: 10px;
 }
 
@@ -307,6 +338,36 @@ body {
   width: 100px;
   height: 100px;
 }
+
+
+/* latest events style */
+section.latest-events{
+  background-color: var(--background-color-heavy);
+  padding-bottom: 300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
