--- a/assets/Css/events.css
+++ b/assets/Css/events.css
@@ -1,5 +1,3 @@
-
-
 a {
   text-decoration: none;
 }
@@ -71,7 +69,7 @@ ul {
   right: -15px;
   border-style: solid;
   border-color: transparent transparent white transparent;
-  border-width: 0px 0px 170px 700px;
+  border-width: 0px 0px 45px 510px;
   transition: var(--transition-delay);
   -webkit-transition: var(--transition-delay);
   -moz-transition: var(--transition-delay);
@@ -80,7 +78,7 @@ ul {
 }
 
 .events .box:hover .img-holder::after {
-  border-width: 170px 700px 170px 0px;
+  border-width: 170px 1020px 170px 0px;
 }
 
 .img-holder img {
@@ -115,7 +113,7 @@ ul {
 .events .box a {
   display: block;
   padding: 10px 30px;
-  margin: 0 auto 30px;
+  margin: 0 auto 10px;
   border: solid 1px transparent;
   width: fit-content;
   border-radius: 6px;
@@ -182,3 +180,32 @@ ul {
 }
 
 /*End-events */
+
+.switcher {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+}
+
+.switcher button {
+  padding: 10px 15px;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: #eee;
+  min-width: 105px;
+  text-align: center;
+  margin-left: 30px;
+  margin-bottom: 40px;
+  transition: 0.2s;
+}
+
+.switcher button.active,
+.switcher button:hover {
+  background-color: var(--main-color);
+  color: white;
+}
+
+.hide {
+  display: none;
+}
