--- a/assets/Css/contact.css
+++ b/assets/Css/contact.css
@@ -10,7 +10,7 @@
 
 /* wave color */
 section.footer .wave .shape-fill {
-  fill: var(--background-color-mid);
+    fill: var(--background-color-mid);
 }
 
 /* main */
@@ -18,6 +18,40 @@ main {
     background-color: var(--background-color-mid);
 }
 
-.card{
+
+section.contact .contact-info .border {
+    background-color: var(--background-color);
+}
+
+section.contact .contact-info h2 {
+    color: var(--main-color);
+}
+
+section.contact .contact-info h6 {
+    color: black;
+}
+
+section.contact .contact-info {
+    color: white;
+}
+
+section.contact .contact-info i {
+    color: var(--main-color);
+}
+section.contact .contact-info .social :hover i {
+    color: var(--background-color-heavy);
+}
+section.contact .contact-info .fast-link a {
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
+}
+
+
+
+
+
+
+
+section.contact .card {
     background-color: var(--background-color);
 }
