--- a/assets/Css/event.css
+++ b/assets/Css/event.css
@@ -32,11 +32,19 @@
 
 .location-info {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: var(--padding-top-bottom);
+  background-color: white;
 }
 
 @media (max-width: 776px) {
+  .location-info {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 993px) {
   .location-info {
     flex-direction: column;
     align-items: center;
@@ -63,28 +71,28 @@
   -o-border-radius: 4px;
 }
 
-.location-img img {
+.location-img iframe {
   width: 650px;
   height: 400px;
 }
-@media (max-width: 992px) {
-  .location-img img {
+/* @media (max-width: 992px) {
+  .location-img iframe {
     width: 460px;
     height: 400px;
   }
-  .location-img:before {
-    width: 480px;
-    height: 420px;
+  .location-img ::before {
+    width: 460px;
+    height: 400px;
   }
-}
+} */
 @media (max-width: 776px) {
-  .location-img img {
-    width: 460px;
-    height: 400px;
+  .location-img iframe {
+    width: 350px;
+    height: 300px;
   }
-  .location-img:before {
-    width: 480px;
-    height: 420px;
+  .location-img::before {
+    width: 370px;
+    height: 320px;
   }
 }
 
@@ -98,18 +106,20 @@
     text-align: center;
   }
 }
+
 .location-details h3 {
   color: var(--secondry-color);
   font-weight: bolder;
+  margin-bottom: 12px;
 }
 
 .location-details p {
   color: #777;
-  line-height: 2.2px;
+  line-height: 10px;
 }
 
 .event-info {
-  padding: var(--padding-top-bottom);
+  padding-bottom: 100px;
   background-color: var(--background-color);
 }
 
@@ -117,45 +127,71 @@
   align-items: center;
 }
 
-.event-imgs {
+.event-imge {
+  background-color: var(--section-background);
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+}
+
+.event-imge .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 40px;
-  padding-top: 40px;
 }
 
-.box-img-event {
-  position: relative;
-  z-index: 1;
+.chest {
+  padding: 15px;
+  box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%),
+    0px 2px 4px 0px rgb(0 0 0 / 12%);
+  overflow: hidden;
 }
-.box-img-event::before {
+
+.chest .imge {
+  position: relative;
+  overflow: hidden;
+}
+
+.chest .imge::before {
   content: "";
   position: absolute;
-  background-color: white;
-  background-size: cover;
-  width: 316px;
-  height: 316px;
-  top: -8px;
-  left: -8px;
-  z-index: -1;
+  background-color: rgb(255 255 255 / 20%);
+  width: 0;
+  height: 0;
+  left: 50%;
+  top: 50%;
+  z-index: 2;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
-.event-imgs img {
-  width: 300px;
-  height: 100%;
+.chest:hover .imge::before {
+  animation: flashing 0.7s;
+  -webkit-animation: flashing 0.7s;
 }
-@media (max-width: 769px) {
-  .event-imgs img {
-    width: 540px;
-  }
 
-  .box-img-event::before {
-    width: 555px;
-    height: 555px;
-  }
+.imge:hover img {
+  transform: rotate(5deg) scale(1.1);
+  -webkit-transform: rotate(5deg) scale(1.1);
+  -moz-transform: rotate(5deg) scale(1.1);
+  -ms-transform: rotate(5deg) scale(1.1);
+  -o-transform: rotate(5deg) scale(1.1);
 }
+
+.chest img {
+  max-width: 100%;
+  transition: var(--transition-delay);
+  -webkit-transition: var(--transition-delay);
+  -moz-transition: var(--transition-delay);
+  -ms-transition: var(--transition-delay);
+  -o-transition: var(--transition-delay);
+}
+
 .more-event-title h2 {
-  font-size: 85px;
+  font-size: 60px;
   color: #dedced;
   margin: 0px 0 40px 0px;
   text-align: center;
