fix git hub pages

--- a/assets/Css/index.css
+++ b/assets/Css/index.css
@@ -103,6 +103,10 @@ section.footer .wave .shape-fill {
   color: var(--main-color);
 }
 
+.navbar .lang-btn{
+  background-color: var(--background-color);
+}
+
 /* slider */
 
 .section-title {
