--- a/assets/Css/contact.css
+++ b/assets/Css/contact.css
@@ -56,3 +56,7 @@ section.contact .contact-info .fast-link a {
 section.contact .card {
     background-color: var(--background-color);
 }
+
+.text-muted{
+    color: var(--background-color-heavy) !important;
+}
